--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,13 +13,15 @@
 
   <!-- include source files here... -->
   <script src="src/Account.js"></script>
-    <script src="src/BankStatement.js"></script>
+  <script src="src/Transaction.js"></script>
+  <script src="src/Date.js"></script>
 
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/account-spec.js"></script>
-  <script src="spec/bank-statement-spec.js"></script>
+  <script src="spec/transaction-spec.js"></script>
+  <script src="spec/date-spec.js"></script>
 
 </head>
 
