put Statement file and spec back

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,6 +15,7 @@
   <script src="src/Account.js"></script>
   <script src="src/Transaction.js"></script>
   <script src="src/Date.js"></script>
+  <script src="src/Statement.js"></script>
 
 
   <!-- include spec files here... -->
@@ -22,6 +23,7 @@
   <script src="spec/account-spec.js"></script>
   <script src="spec/transaction-spec.js"></script>
   <script src="spec/date-spec.js"></script>
+  <script src="spec/statement-spec.js"></script>
 
 </head>
 
