separating unit and feature tests for statement

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -22,8 +22,9 @@
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/account-spec.js"></script>
   <script src="spec/transaction-spec.js"></script>
-  <script src="spec/date-spec.js"></script>
   <script src="spec/statement-spec.js"></script>
+  <script src="spec/date-spec.js"></script>
+  <script src="spec/features/print-statement-spec.js"></script>
 
 </head>
 
