adding feature to test logging refusal to withdraw when overdrawn

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -25,6 +25,7 @@
   <script src="spec/statement-spec.js"></script>
   <script src="spec/date-spec.js"></script>
   <script src="spec/features/print-statement-spec.js"></script>
+  <script src="spec/features/overdrawn-spec.js"></script>
 
 </head>
 
